[gd_scene load_steps=4 format=3 uid="uid://oo6wlybn4agn"]

[ext_resource type="Script" uid="uid://dtrvjfcmr5y3u" path="res://Scripts/game_manager.gd" id="1_mmt5l"]
[ext_resource type="FontFile" uid="uid://xfehdl70wchs" path="res://Data/Fonts/nintendo-nes-font.otf" id="2_fgdfb"]
[ext_resource type="Texture2D" uid="uid://cu1f3u618i552" path="res://Sprites/Game_Over_Button.png" id="3_yqty0"]

[node name="Game_Manager" type="Node2D"]
script = ExtResource("1_mmt5l")

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score_And_Highscore" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 75.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="ScoreBox" type="HBoxContainer" parent="CanvasLayer/Score_And_Highscore"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -206.0
offset_bottom = 75.0
grow_horizontal = 0

[node name="Curr_Score_Title" type="Label" parent="CanvasLayer/Score_And_Highscore/ScoreBox"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fgdfb")
text = "SCORE:"

[node name="Curr_Score_Score" type="Label" parent="CanvasLayer/Score_And_Highscore/ScoreBox"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fgdfb")
text = "00000"

[node name="HighScoreBox" type="HBoxContainer" parent="CanvasLayer/Score_And_Highscore"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -408.0
offset_right = -3.0
offset_bottom = 75.0
grow_horizontal = 0

[node name="Hi_Score_Title" type="Label" parent="CanvasLayer/Score_And_Highscore/HighScoreBox"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_fgdfb")
text = "HI:"

[node name="Hi_Score_Score" type="Label" parent="CanvasLayer/Score_And_Highscore/HighScoreBox"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fgdfb")
text = "00000"

[node name="Game_Over" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 647.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Game_Over"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game_Over_Texture" type="Label" parent="CanvasLayer/Game_Over/VBoxContainer"]
modulate = Color(0.501961, 0.501961, 0.501961, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fgdfb")
theme_override_font_sizes/font_size = 33
text = "G A M E  O V E R"

[node name="Start_Over_Button" type="TextureButton" parent="CanvasLayer/Game_Over/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_direction = 1
layout_mode = 2
texture_normal = ExtResource("3_yqty0")
stretch_mode = 5

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/Game_Over/VBoxContainer/Start_Over_Button" to="." method="_on_start_over_button_pressed"]
